2025-11-28T01:14:07Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19751298296 # 822
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-28
* notice: last 14d: unq all: 2 3
* notice: prev accum: outdated-unq outdated-all / unq all: 1247 2009 / 1251 2013
* notice: next accum: outdated-unq outdated-all / unq all: 1248 2010 / 1251 2013
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-11-13] / []

2025-11-25T01:15:26Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19654851673 # 819
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-25
* notice: last 14d: unq all: 3 4
* notice: prev accum: outdated-unq outdated-all / unq all: 1247 2009 / 1250 2012
* notice: next accum: outdated-unq outdated-all / unq all: 1247 2009 / 1251 2013
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-11-24]

2025-11-24T01:20:27Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19620468352 # 818
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-24
* notice: last 14d: unq all: 2 3
* notice: prev accum: outdated-unq outdated-all / unq all: 1245 2007 / 1249 2011
* notice: next accum: outdated-unq outdated-all / unq all: 1247 2009 / 1250 2012
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-11-09] / [2025-11-23]

2025-11-17T01:16:23Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19415335693 # 811