@@ -1,3 +1,12 @@
+2025-12-01T01:29:18Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19808238949 # 825
+* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-01
+* notice: last 14d: unq all: 3 3
+* notice: prev accum: outdated-unq outdated-all / unq all: 1248 2010 / 1251 2013
+* notice: next accum: outdated-unq outdated-all / unq all: 1249 2011 / 1252 2014
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2025-11-16] / [2025-11-30]
+
 2025-11-28T01:14:07Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19751298296 # 822
 * notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-28
